// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LineItemRow/> render() should render with product image 1`] = `
<tr>
  <td
    className="container"
  >
    <div
      className="imgContainer"
    >
      <img
        alt="Alt"
        className="img"
        src={null}
      />
    </div>
    <div
      className="legend"
    >
      <a
        className="title"
        href="https://storegorgias3.myshopify.com/admin/products/1/variants/31128766316567"
        rel="noopener noreferrer"
        target="_blank"
      >
        Acidulous candy
      </a>
      <div
        className="subtitle"
      >
        Red / A
      </div>
      <div
        className="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <div
        className="d-inline-block text-center"
      >
        <ShopifyMoneyAmount
          amount="1.00"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
          shortCurrencyCode={false}
        />
      </div>
      <span
        className="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    className="quantityCol"
  >
    <Input
      disabled={false}
      min={1}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </td>
  <td
    className="numberCol"
  >
    <strong>
      <ShopifyMoneyAmount
        amount="1.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </strong>
    <Button
      className="delete focusable"
      color="link"
      onClick={[MockFunction]}
      tabIndex={0}
      tag="button"
      type="button"
    >
      <i
        className="material-icons"
      >
        close
      </i>
    </Button>
  </td>
</tr>
`;

exports[`<LineItemRow/> render() should render without product image 1`] = `
<tr>
  <td
    className="container"
  >
    <div
      className="imgContainer"
    >
      <img
        alt=""
        className="img"
        src="test-file-stub"
      />
    </div>
    <div
      className="legend"
    >
      <div
        className="title"
      >
        Acidulous candy
      </div>
      <div
        className="subtitle"
      >
        Red / A
      </div>
      <div
        className="subtitle"
      >
        SKU: 
        0987654321-1
      </div>
    </div>
  </td>
  <td
    className="numberCol"
  >
    <div
      className="d-flex"
    >
      <div
        className="d-inline-block text-center"
      >
        <ShopifyMoneyAmount
          amount="1.00"
          currencyCode="USD"
          negative={false}
          renderIfZero={true}
          shortCurrencyCode={false}
        />
      </div>
      <span
        className="times"
      >
        x
      </span>
    </div>
  </td>
  <td
    className="quantityCol"
  >
    <Input
      disabled={false}
      min={1}
      onChange={[Function]}
      type="number"
      value={1}
    />
  </td>
  <td
    className="numberCol"
  >
    <strong>
      <ShopifyMoneyAmount
        amount="1.00"
        currencyCode="USD"
        negative={false}
        renderIfZero={true}
        shortCurrencyCode={false}
      />
    </strong>
    <Button
      className="delete focusable"
      color="link"
      onClick={[MockFunction]}
      tabIndex={0}
      tag="button"
      type="button"
    >
      <i
        className="material-icons"
      >
        close
      </i>
    </Button>
  </td>
</tr>
`;
